# cisc327-library-management-a2-2250

./: .coverage  .gitignore  Dockerfile  README.md  database.py  library_service.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml
CISC_327_Library_Project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/: __init__.py  library_service.py
templates/: base.html
tests/: R1_test.py  R2_test.py  R3_test.py  R4_test.py  R5_test.py  R6_test.py  R7_test.py  __init__.py  conftest.py  test_e2e.py  test_payment_mock_stub.py
