[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CISC-327-Library-Project"
version = "0.1.0"
description = "CISC 327 assignment"
authors = [
    { name = "Charlotte Smith", email = "charlotte.em.smith@gmail.com" }
]
readme = ""
requires-python = ">=3.7"


[tool.setuptools]
py-modules = ["app", "database", "library_service"]  # Your standalone files
packages = ["routes"]

[tool.pytest.ini_options]
pythonpath = ["."]